--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,133 @@
 .js-enabled .js-visible {
   display: inline-block !important;
 }
+
+$govuk-assets-path: "/digital-services-tax/assets/lib/govuk-frontend/govuk/assets/";
+$hmrc-assets-path: "/digital-services-tax/assets/lib/hmrc-frontend/hmrc/";
+
+@import "lib/govuk-frontend/govuk/all";
+@import "lib/hmrc-frontend/hmrc/all";
+
+@import "language-selection";
+
+.print-only {
+  display: none;
+}
+
+@media print {
+  .govuk-header {
+    display: none;
+  }
+  .print-hide, .govuk-footer a {
+    display: none;
+  }
+  .phase-banner a {
+    display: inline;
+  }
+  .govuk-grid-column-two-thirds #print-submission > div.print-only {
+    display: block;
+  }
+  .govuk-grid-column-two-thirds #print-submission > :not(.print-only),
+  .govuk-grid-column-two-thirds #print-submission a {
+    display: none;
+  }
+}
+
+.print-icon {
+  background: transparent no-repeat 0 50%;
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAASAgMAAAAvVbb5AAAACVBMVEX///////8KDAwmYEUdAAAAAXRSTlMAQObYZgAAADBJREFUCFtjYOBa1cDAoBkKJFYCCSYwEYpCrAICZCI0FEhkrURmQRRnrYRpW7WqAQAlGR86Ip1rwwAAAABJRU5ErkJggg==");
+  padding: 0.5em 0 0.5em 28px;
+}
+
+.autocomplete__wrapper {
+  max-width: 100%;
+}
+
+.autocomplete__option {
+  font-family: "nta",Arial,sans-serif;
+}
+
+.country-code-wrapper.govuk-form-group--error input {
+  border: 2px solid #d4351c;
+}
+.govuk-input__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.dst-listing .govuk-summary-list__value {
+  display: none;
+}
+
+.govuk-input__suffix {
+  font-size: 19px;
+  line-height: 1.31579;
+  font-family: "GDS Transport",arial,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  min-width: 40px;
+  height: 40px;
+  padding: 5px;
+  border: 2px solid #0b0c0c;
+  border-left: 0;
+  border-left-color: rgb(11, 12, 12);
+  background-color: #f3f2f1;
+  text-align: center;
+  white-space: nowrap;
+  cursor: default;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+.govuk-input-z-index {
+  z-index: 1;
+}
+
+.country-code-wrapper.form-group-error input {
+  border: 4px solid #d4351c;
+}
+
+.country-code-wrapper.form-group-error input:focus {
+  border-color: #0b0c0c;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+input[type="text"].autocomplete__input {
+  width: 100%;
+}
+
+.card {
+  background: #f8f8f8;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.card .card-body > *:last-child, .card > *:last-child {
+  margin-bottom: 0;
+}
+
+@media (min-width: 40.0625em) {
+  .card {
+    margin-bottom: 0;
+  }
+}
+
+.no-padding-left {
+  padding-left: 0px;
+}
+
+.padding-bottom-50 {
+  padding-bottom: 50px;
+}
+
+.text-overflow {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
