implementing controllers; service layers; models; packages; views; appConfig; connectors

--- a/app/views/ErrorTemplate.scala.html
+++ b/app/views/ErrorTemplate.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @this(
-    layout: templates.Layout
+    layout: layouts.GovukLayoutWrapper
 )
 
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages)
