--- a/app/views/CheckYourAnswersView.scala.html
+++ b/app/views/CheckYourAnswersView.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @this(
-    layout: templates.Layout,
+    layout: layouts.GovukLayoutWrapper,
     govukSummaryList: GovukSummaryList
 )
 
