--- a/app/views/TimeOut.scala.html
+++ b/app/views/TimeOut.scala.html
@@ -14,23 +14,21 @@
  * limitations under the License.
  *@
 
+@import config.FrontendAppConfig
 @this(
-    layout: layouts.GovukLayoutWrapper,
-    govukButton: GovukButton
+    layout: layouts.GovukLayoutWrapper
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@()(implicit request: RequestHeader, messages: Messages, appConfig: FrontendAppConfig)
 
-@layout(pageTitle = Some(titleNoForm(messages("journeyRecovery.startAgain.title")))) {
-
-    <h1 class="govuk-heading-xl">@messages("journeyRecovery.startAgain.heading")</h1>
-
-    <p class="govuk-body">@messages("journeyRecovery.startAgain.guidance")</p>
+@layout(pageTitle = Some(messages("time-out.title").toString())) {
+    <h1 class="govuk-heading-l">@messages("time-out.title")</h1>
+    <p class="govuk-body">@messages("time-out.save")</p>
 
     <p class="govuk-body">
-        @govukButton(
-            ButtonViewModel(messages("site.startAgain"))
-                .asLink(routes.IndexController.onPageLoad.url)
-        )
+        <a href="@controllers.routes.AuthenticationController.timeIn(
+            request.headers.get("Referer").getOrElse(appConfig.dstIndexPage))" class="govuk-button" role="button">
+            @messages("common.sign-in")
+        </a>
     </p>
 }
