--- a/app/views/UnauthorisedView.scala.html
+++ b/app/views/UnauthorisedView.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @this(
-    layout: templates.Layout
+    layout: layouts.GovukLayoutWrapper
 )
 
 @()(implicit request: Request[_], messages: Messages)
