--- a/app/views/UnauthorisedView.scala.html
+++ b/app/views/UnauthorisedView.scala.html
@@ -21,7 +21,7 @@
 @()(implicit request: Request[_], messages: Messages)
 
 @layout(
-    pageTitle = titleNoForm(messages("unauthorised.title")),
+    pageTitle = Some(titleNoForm(messages("unauthorised.title"))),
     timeout   = false
 ) {
 
