fixing compilation errors

--- a/app/views/ReturnsDashboardView.scala.html
+++ b/app/views/ReturnsDashboardView.scala.html
@@ -71,7 +71,7 @@ useFullWidth = true
         content = HtmlContent(messages("returnsDashboard.company-name"))
         ),
         value = Value(
-        content = HtmlContent(company.name)
+        content = HtmlContent(@company.name)
         )
         )
         )
