--- a/app/views/errors/IncorrectAccountAffinity.scala.html
+++ b/app/views/errors/IncorrectAccountAffinity.scala.html
@@ -18,12 +18,11 @@
 govukLayout: views.html.layouts.GovukLayoutWrapper
 )
 
-@()(implicit messages: Messages)
+@()(implicit request: Request[_], messages: Messages)
 
 @govukLayout(
 pageTitle = Some(s"${messages("common.title.short")} - ${messages("common.title")}")
-)
-{
+){
 <h1 class="govuk-heading-l">@messages("wrong-account.heading")</h1>
 <p class="govuk-body">@messages("wrong-account.sign-out.reason")</p>
 <p class="govuk-body">@messages("wrong-account.sign-in.reason")</p>
