--- a/app/views/auth/SignedOutView.scala.html
+++ b/app/views/auth/SignedOutView.scala.html
@@ -22,7 +22,7 @@
 @()(implicit request: Request[_], messages: Messages)
 
 @layout(
-    pageTitle    = titleNoForm(messages("signedOut.title"))
+    pageTitle    = Some(titleNoForm(messages("signedOut.title")))
 ) {
 
     <h1 class="govuk-heading-xl">@messages("signedOut.heading")</h1>
