--- a/app/views/errors/IncorrectAccountCredRole.scala.html
+++ b/app/views/errors/IncorrectAccountCredRole.scala.html
@@ -18,12 +18,11 @@
 govukLayout: views.html.layouts.GovukLayoutWrapper
 )
 
-@()(implicit messages: Messages)
+@()(implicit request: Request[_], messages: Messages)
 
 @govukLayout(
 pageTitle = Some(s"${messages("common.title.short")} - ${messages("common.title")}")
-)
-{
+){
 <h1 class="govuk-heading-l">@messages("wrong-creds.heading")</h1>
 <p class="govuk-body" id="cred_role_p1">@messages("wrong-creds.p1")</p>
 <p class="govuk-body" id="cred_role_p2">@messages("wrong-creds.p2")</p>
