--- a/app/views/ReturnsDashboardView.scala.html
+++ b/app/views/ReturnsDashboardView.scala.html
@@ -26,7 +26,9 @@ govukLayout: views.html.layouts.GovukLayoutWrapper,
 govukSummaryList : GovukSummaryList
 )
 
-@(reg: Registration, outstanding: List[Period], amended: List[Period])(implicit messages: Messages, appConfig: FrontendAppConfig)
+@(reg: Registration, outstanding: List[Period], amended: List[Period])(implicit request:Request[_], messages: Messages, appConfig: FrontendAppConfig)
+
+@company = @{reg.companyReg.company}
 
 @govukLayout(
 pageTitle = Some(s"${messages("resubmit-a-return.title")} - ${messages("common.title")} - ${messages("common.title.suffix")}"),
@@ -34,7 +36,6 @@ useFullWidth = true
 ) {
 
 
-@{val company = reg.companyReg.company}
 
 <div class="grid-row govuk-grid-column-full no-padding-left">
     <div class="govuk-grid-column-two-thirds no-padding-left">
@@ -42,7 +43,6 @@ useFullWidth = true
         <h1 class="govuk-heading-xl">
             @messages("returnsDashboard.heading")
         </h1>
-
 
 
 
@@ -71,7 +71,7 @@ useFullWidth = true
         content = HtmlContent(messages("returnsDashboard.company-name"))
         ),
         value = Value(
-        content = HtmlContent(@company.name)
+        content = HtmlContent(company.name)
         )
         )
         )
