--- a/app/views/ErrorTemplate.scala.html
+++ b/app/views/ErrorTemplate.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @this(
-    layout: layouts.GovukLayoutWrapper
+    layout: templates.Layout
 )
 
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages)
