--- a/app/views/ReturnsDashboardView.scala.html
+++ b/app/views/ReturnsDashboardView.scala.html
@@ -22,7 +22,7 @@
 @import models.registration.Period
 
 @this(
-govukLayout: views.html.layouts.GovukLayoutWrapper,
+govukLayout: templates.Layout,
 govukSummaryList : GovukSummaryList
 )
 
