--- a/app/views/errors/IncorrectAccountAffinity.scala.html
+++ b/app/views/errors/IncorrectAccountAffinity.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @this(
-govukLayout: views.html.layouts.GovukLayoutWrapper
+govukLayout: views.html.templates.Layout
 )
 
 @()(implicit request: Request[_], messages: Messages)
