--- a/app/views/TimeOut.scala.html
+++ b/app/views/TimeOut.scala.html
@@ -16,7 +16,7 @@
 
 @import config.FrontendAppConfig
 @this(
-    layout: layouts.GovukLayoutWrapper
+    layout: templates.Layout
 )
 
 @()(implicit request: Request[_], messages: Messages, appConfig: FrontendAppConfig)
