--- a/app/views/TimeOut.scala.html
+++ b/app/views/TimeOut.scala.html
@@ -26,7 +26,7 @@
     <p class="govuk-body">@messages("time-out.save")</p>
 
     <p class="govuk-body">
-        <a href="@controllers.routes.AuthenticationController.signIn" class="govuk-button" role="button">
+        <a href="@controllers.auth.routes.AuthenticationController.signIn" class="govuk-button" role="button">
             @messages("common.sign-in")
         </a>
     </p>
