--- a/app/views/PayYourDigitalServiceTaxView.scala.html
+++ b/app/views/PayYourDigitalServiceTaxView.scala.html
@@ -14,17 +14,25 @@
  * limitations under the License.
  *@
 
+@import models.formatDate
+@import models.registration.Period
+
 @this(
         layout: templates.Layout,
         govukButton: GovukButton
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@(regNo: Option[DSTRegNumber], outstanding: List[Period])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = Some(titleNoForm(messages("payYourDigitalServiceTax.title"))), showBackLink = false) {
 
     <h1 class="govuk-heading-xl">@messages("pay-your-dst.heading")</h1>
-
+    @outstanding.headOption.map { period =>
+        <p class="govuk-body">@messages("pay-your-dst.due-date", s"${formatDate(period.paymentDue)}") </p>
+    }
+    @regNo.map { rn =>
+        <p class="govuk-body">@messages("pay-your-dst.include-reg-no", s"<strong>$rn</strong>")</p>
+    }
 
     <p class="govuk-body">@messages("pay-your-dst.how-to-pay.1")
          <a href="https://www.gov.uk/guidance/pay-your-digital-services-tax" class="govuk-link" target="_blank">@messages("pay-your-dst.how-to-pay.2")</a>.
