DDCYLS-3207: amend Layout.scala.html to fix the style

--- a/app/views/PayYourDigitalServiceTaxView.scala.html
+++ b/app/views/PayYourDigitalServiceTaxView.scala.html
@@ -14,31 +14,33 @@
  * limitations under the License.
  *@
 
+@import config.FrontendAppConfig
 @import models.formatDate
 @import models.registration.Period
 
 @this(
         layout: templates.Layout,
-        govukButton: GovukButton
+        govukButton: GovukButton,
+        appConfig: FrontendAppConfig
 )
 
 @(regNo: Option[DSTRegNumber], outstanding: List[Period])(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = Some(titleNoForm(messages("payYourDigitalServiceTax.title"))), showBackLink = false) {
+@layout(pageTitle = titleNoForm(messages("pay-your-dst.title")), showBackLink = true) {
 
     <h1 class="govuk-heading-xl">@messages("pay-your-dst.heading")</h1>
     @outstanding.headOption.map { period =>
         <p class="govuk-body">@messages("pay-your-dst.due-date", s"${formatDate(period.paymentDue)}") </p>
     }
     @regNo.map { rn =>
-        <p class="govuk-body">@messages("pay-your-dst.include-reg-no", s"<strong>$rn</strong>")</p>
+        <p class="govuk-body">@messages("pay-your-dst.include-reg-no") <strong>@rn</strong> @messages("pay-your-dst.making-payment")</p>
     }
 
     <p class="govuk-body">@messages("pay-your-dst.how-to-pay.1")
          <a href="https://www.gov.uk/guidance/pay-your-digital-services-tax" class="govuk-link" target="_blank">@messages("pay-your-dst.how-to-pay.2")</a>.
     </p>
     <p class="govuk-body">
-        <a href="#" class="govuk-link">
+        <a href= "@routes.ReturnsDashboardController.onPageLoad.url" class="govuk-link">
             @messages("pay-your-dst.back-to-details")
         </a>
     </p>
