--- a/app/views/TimeOut.scala.html
+++ b/app/views/TimeOut.scala.html
@@ -21,7 +21,7 @@
 
 @()(implicit request: Request[_], messages: Messages, appConfig: FrontendAppConfig)
 
-@layout(pageTitle = Some(messages("time-out.title").toString())) {
+@layout(pageTitle = messages("time-out.title").toString()) {
     <h1 class="govuk-heading-l">@messages("time-out.title")</h1>
     <p class="govuk-body">@messages("time-out.save")</p>
 
