--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -14,59 +14,53 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.govukfrontend.views.html.components._
-@import uk.gov.hmrc.hmrcfrontend.views.html.components._
-@import uk.gov.hmrc.govukfrontend.views.html.components.{Header => _, _}
-@import uk.gov.hmrc.hmrcfrontend.views.html.helpers.HmrcTrackingConsentSnippet
-@import uk.gov.hmrc.hmrcfrontend.views.html.helpers.HmrcReportTechnicalIssueHelper
-@import uk.gov.hmrc.hmrcfrontend.views.html.helpers.HmrcStandardFooter
 @import views.html.helpers.FullWidthMainContent
 @import views.html.scripts.Scripts
 @import config.FrontendAppConfig
 @import views.html.helper.CSPNonce
 
 @this(
-    appConfig: config.FrontendAppConfig,
+    appConfig: FrontendAppConfig,
     govukLayout: GovukLayout,
     govukBackLink: GovukBackLink,
-    hmrcHeader: HmrcHeader,
+    hmrcHead: HmrcHead,
     hmrcStandardHeader: HmrcStandardHeader,
-    hmrcTimeoutDialog : HmrcTimeoutDialog,
-    scripts: Scripts,
-    hmrcTrackingConsentSnippet: HmrcTrackingConsentSnippet,
-    hmrcReportTechnicalIssueHelper: HmrcReportTechnicalIssueHelper,
     hmrcStandardFooter: HmrcStandardFooter,
+    hmrcTrackingConsentSnippet: HmrcTrackingConsentSnippet,
+    hmrcLanguageSelect: HmrcLanguageSelect,
+    hmrcTimeoutDialog: HmrcTimeoutDialog,
+    hmrcReportTechnicalIssueHelper: HmrcReportTechnicalIssueHelper,
+    hmrcScripts: HmrcScripts,
     fullWidthMainContent: FullWidthMainContent,
     defaultMainContentLayout: TwoThirdsMainContent
 )
 
-@(
-    pageTitle: Option[String] = None,
-    showBackLink: Boolean = true,
-    timeout: Boolean = true,
-    showSignOut: Boolean = true,
-    bodyClasses: Option[String] = None,
-    js: Option[Html] = None,
-    useFullWidth: Boolean = false,
-    refresh: Int = 0)(contentBlock: Html)(implicit request: Request[_], messages: Messages)
+@(pageTitle: String, showBackLink: Boolean = true, timeout: Boolean = true, showSignOut: Boolean = true, useFullWidth: Boolean = false,
+refresh: Int = 0)(contentBlock: Html)(implicit request: Request[_], messages: Messages)
 
 @head = {
 
     @hmrcTrackingConsentSnippet()
 
-    @if(timeout) {
-        @hmrcTimeoutDialog(TimeoutDialog(
+   @hmrcHead(
+       headBlock = if(timeout) { Some(
+        hmrcTimeoutDialog(TimeoutDialog(
             timeout = Some(appConfig.timeout),
             countdown = Some(appConfig.countdown),
             keepAliveUrl = Some(routes.KeepAliveController.keepAlive.url),
             signOutUrl = Some(controllers.auth.routes.AuthenticationController.signOut().url),
             timeoutUrl = Some(controllers.auth.routes.AuthenticationController.timeOut().url),
             title = Some(messages("timeout.title")),
-            messageSuffix = Some(messages("timeout.messageSuffix")),
-            language = Some(messages.lang.code)
-        ))
-    }
+            messageSuffix = Some(messages("timeout.messageSuffix"))
+            )))
+        } else None
+    )
 
+    <link href="@routes.Assets.versioned("stylesheets/application.css")" media="all" rel="stylesheet" type="text/css" />
+}
+
+@additionalScripts = {
+    <script src='@controllers.routes.Assets.versioned("javascripts/application.min.js")'></script>
 }
 
 @beforeContent = {
@@ -77,16 +71,23 @@
 
 @content = {
     @contentBlock
-    @hmrcReportTechnicalIssueHelper()
+
+    <div class="govuk-!-margin-top-8">
+        @hmrcReportTechnicalIssueHelper()
+    </div>
 }
 
 @govukLayout(
-  pageTitle = pageTitle,
-  headBlock = Some(head),
-  headerBlock = Some(hmrcStandardHeader(
-    serviceUrl  = Some(routes.ReturnsDashboardController.onPageLoad.url),
-    signOutUrl  = if(showSignOut) Some(controllers.auth.routes.AuthenticationController.signOut().url) else None
-)),
-  scriptsBlock = Some(scripts()),
-  mainContentLayout = if(useFullWidth) Some(fullWidthMainContent(_)) else Some(defaultMainContentLayout(_))
+    pageTitle = Some(pageTitle),
+    headBlock = Some(head),
+    headerBlock = Some(hmrcStandardHeader(
+        serviceUrl  = Some(routes.ReturnsDashboardController.onPageLoad.url),
+        signOutUrl  = if(showSignOut) Some(controllers.auth.routes.AuthenticationController.signOut().url) else None
+    )),
+    beforeContentBlock = Some(beforeContent),
+    footerBlock        = Some(hmrcStandardFooter()),
+    scriptsBlock       = Some(hmrcScripts(
+        scriptsBlock = Some(additionalScripts)
+    )),
+    mainContentLayout = if(useFullWidth) Some(fullWidthMainContent(_)) else Some(defaultMainContentLayout(_))
 )(content)
