--- a/app/views/TimeOut.scala.html
+++ b/app/views/TimeOut.scala.html
@@ -28,7 +28,7 @@
 
     <p class="govuk-body">
         <a href="@controllers.auth.routes.AuthenticationController.signIn.url" class="govuk-button" role="button">
-            @messages("site.sign-in")
+            @messages("site.signIn")
         </a>
     </p>
 }
