DDCYLS-3203 set back link to false on landing dashboard page

--- a/app/views/ReturnsDashboardView.scala.html
+++ b/app/views/ReturnsDashboardView.scala.html
@@ -33,7 +33,8 @@ appConfig: FrontendAppConfig
 
 @govukLayout(
 pageTitle = s"${messages("returnsDashboard.heading")} - ${messages("common.title")} - ${messages("common.title.suffix")}",
-useFullWidth = true
+useFullWidth = true,
+showBackLink = false
 ) {
 
 <div class="grid-row govuk-grid-column-full no-padding-left">
