--- a/app/views/SelectActivitiesView.scala.html
+++ b/app/views/SelectActivitiesView.scala.html
@@ -24,7 +24,7 @@
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("selectActivities.title"))) {
+@layout(pageTitle = title(form, messages("select-activities.heading"))) {
 
     @formHelper(action = routes.SelectActivitiesController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
@@ -36,9 +36,9 @@
             CheckboxesViewModel(
                 form   = form,
                 name   = "value",
-                legend = LegendViewModel(messages("selectActivities.heading")).asPageHeading(),
+                legend = LegendViewModel(messages("select-activities.heading")).asPageHeading(),
                 items  = SelectActivities.checkboxItems
-            )
+            ).withHint(HintViewModel(messages("select-activities.hint")))
         )
 
         @govukButton(
