--- a/app/views/CompanyDetailsView.scala.html
+++ b/app/views/CompanyDetailsView.scala.html
@@ -35,7 +35,7 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        <h1 class="govuk-heading-xl">@messages("companyDetails.heading")</h1>
+        <h1 class="govuk-heading-l">@messages("companyDetails.heading")</h1>
 
         @govukInput(
             InputViewModel(
@@ -52,7 +52,7 @@
                 label = LabelViewModel(messages("companyDetails.uniqueTaxpayerReference"))
             )
             .withWidth(TwoThirds)
-            .withHint(HintViewModel(messages("companyDetails.uniqueTaxpayerReference.hint")))
+            .withHint(HintViewModel(HtmlContent(messages("companyDetails.uniqueTaxpayerReference.hint"))))
         )
 
         @govukButton(
