--- a/app/views/ManageCompaniesView.scala.html
+++ b/app/views/ManageCompaniesView.scala.html
@@ -19,10 +19,11 @@
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    govukSummaryList: GovukSummaryList
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, list: SummaryList)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("manageCompanies.title"))) {
 
@@ -32,12 +33,17 @@
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
         }
 
+        <h1 class="govuk-heading-l">@messages("manageCompanies.heading")</h1>
+
+        @govukSummaryList(list)
+
         @govukRadios(
-            RadiosViewModel(
+            RadiosViewModel.yesNo(
                 field  = form("value"),
-                legend = LegendViewModel(messages("manageCompanies.heading")).asPageHeading(),
-                items  = ManageCompanies.options
+                legend = LegendViewModel(messages("manageCompanies.addCompany.heading"))
             )
+             .inline()
+             .withHint(HintViewModel(messages("manageCompanies.hint")))
         )
 
         @govukButton(
