--- a/app/views/CompanyDetailsView.scala.html
+++ b/app/views/CompanyDetailsView.scala.html
@@ -27,7 +27,7 @@
 
 @(form: Form[_], index: Index, mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("companyDetails.title"))) {
+@layout(pageTitle = title(form, messages(s"companyDetails.${mode}.title"))) {
 
     @formHelper(action = routes.CompanyDetailsController.onSubmit(index, mode), Symbol("autoComplete") -> "off") {
 
