--- a/app/views/SelectActivitiesView.scala.html
+++ b/app/views/SelectActivitiesView.scala.html
@@ -26,7 +26,7 @@
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("select-activities.heading"))) {
+@layout(pageTitle = title(form, messages("select-activities.title"))) {
 
     @formHelper(action = routes.SelectActivitiesController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
