--- a/app/views/ReportMediaAlternativeChargeView.scala.html
+++ b/app/views/ReportMediaAlternativeChargeView.scala.html
@@ -14,15 +14,24 @@
  * limitations under the License.
  *@
 
+@import viewmodels.LegendSize
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
+    govukDetails: GovukDetails,
     govukRadios: GovukRadios,
     govukButton: GovukButton
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@hintAndIntro=@{
+    govukDetails(Details(
+        summary = HtmlContent(messages("reportMediaAlternativeCharge.details")),
+        content = HtmlContent(messages("reportMediaAlternativeCharge.details.text"))
+    ))
+}
 
 @layout(pageTitle = title(form, messages("reportMediaAlternativeCharge.title"))) {
 
@@ -37,6 +46,7 @@
                 field = form("value"),
                 legend = LegendViewModel(messages("reportMediaAlternativeCharge.heading")).asPageHeading()
             )
+            .withHint(HintViewModel(HtmlContent(hintAndIntro)))
         )
 
         @govukButton(
