DDCYLS-3213: Update UI

--- a/app/views/ReportMediaAlternativeChargeView.scala.html
+++ b/app/views/ReportMediaAlternativeChargeView.scala.html
@@ -38,7 +38,7 @@
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("reportMediaAlternativeCharge.heading")).asPageHeading()
+                legend = LegendViewModel(messages("reportMediaAlternativeCharge.heading")).asPageHeading(LegendSize.Large)
             )
         )
 
