--- a/app/views/CrossBorderTransactionReliefView.scala.html
+++ b/app/views/CrossBorderTransactionReliefView.scala.html
@@ -26,7 +26,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, prefix: PrefixOrSuffix)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("crossBorderTransactionRelief.title"))) {
 
@@ -40,8 +40,8 @@
             InputViewModel(
                 field = form("value"),
                 label = LabelViewModel(messages("crossBorderTransactionRelief.heading")).asPageHeading(LabelSize.Large)
-            ).withPrefix(prefix)
-            .asNumeric()
+            ).withPrefix(PrefixOrSuffix(content = Text("£")))
+            .withInputMode("decimal")
             .withWidth(Fixed10)
         )
 
