--- a/app/views/ReportSearchAlternativeChargeView.scala.html
+++ b/app/views/ReportSearchAlternativeChargeView.scala.html
@@ -37,6 +37,7 @@
                 field = form("value"),
                 legend = LegendViewModel(messages("reportSearchAlternativeCharge.heading")).asPageHeading()
             )
+            .inline()
         )
 
         @govukButton(
