--- a/app/views/ReportOnlineMarketplaceAlternativeChargeView.scala.html
+++ b/app/views/ReportOnlineMarketplaceAlternativeChargeView.scala.html
@@ -39,6 +39,7 @@
                 field = form("value"),
                 legend = LegendViewModel(messages("reportOnlineMarketplaceAlternativeCharge.heading")).asPageHeading(LegendSize.Large)
             )
+             .inline()
         )
 
         @govukButton(
