--- a/.g8/checkboxPage/app/views/$className$View.scala.html
+++ b/.g8/checkboxPage/app/views/$className$View.scala.html
@@ -1,3 +1,5 @@
+@import viewmodels.LegendSize
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -20,7 +22,7 @@
             CheckboxesViewModel(
                 form   = form,
                 name   = "value",
-                legend = LegendViewModel(messages("$className;format="decap"$.heading")).asPageHeading(),
+                legend = LegendViewModel(messages("$className;format="decap"$.heading")).asPageHeading(LegendSize.Large),
                 items  = $className$.checkboxItems
             )
         )
