--- a/.g8/datePage/app/views/$className$View.scala.html
+++ b/.g8/datePage/app/views/$className$View.scala.html
@@ -1,3 +1,5 @@
+@import viewmodels.LegendSize
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -19,7 +21,7 @@
         @govukDateInput(
             DateViewModel(
                 field  = form("value"),
-                legend = LegendViewModel(messages("$className;format="decap"$.heading")).asPageHeading()
+                legend = LegendViewModel(messages("$className;format="decap"$.heading")).asPageHeading(LegendSize.Large)
             )
             .withHint(HintViewModel(messages("$className;format="decap"$.hint")))
         )
