--- a/app/views/ReportAlternativeChargeView.scala.html
+++ b/app/views/ReportAlternativeChargeView.scala.html
@@ -45,6 +45,7 @@
                 field = form("value"),
                 legend = LegendViewModel(messages("reportAlternativeCharge.heading")).asPageHeading(LegendSize.Large)
             )
+             .inline()
              .withHint(HintViewModel(HtmlContent(hintAndIntro)))
         )
 
