--- a/app/views/ReportMediaAlternativeChargeView.scala.html
+++ b/app/views/ReportMediaAlternativeChargeView.scala.html
@@ -40,6 +40,7 @@
                 field = form("value"),
                 legend = LegendViewModel(messages("reportMediaAlternativeCharge.heading")).asPageHeading(LegendSize.Large)
             )
+             .inline()
         )
 
         @govukButton(
